tests/miniJava/neg/000118_mutation.MiniJava
class java { public Main static void Main ( String [ ] java ) { { } } }
